[project]
name = "streamlit-app-deploy"
version = "0.1.0"
description = "streamlitの練習用"
authors = [
    {name = "hoge"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (==1.41.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
